feat(app): update subscribe copy, add PDF download to Welcome

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -3,12 +3,16 @@ import { Icon } from 'astro-icon/components'
 import Subscribe from './Subscribe.astro'
 ---
 
+<!-- Subscribe for a Calming your mind in Pregnancy: 3 simple grounding tools -->
 <footer class="relative z-10 border-t-[1px]">
   <!-- Newsletter CTA -->
-  <div class="container-lg flex justify-between flex-wrap gap-4 p-12">
+  <div class="container-lg flex justify-between items-center flex-wrap gap-4 p-12">
     <div class="flex flex-col gap-4">
-      <h3 class="text-md">Get notified when I publish new articles</h3>
-      <p>Stay up to date with the latest news, announcements, and articles.</p>
+      <h3 class="text-md">Newsletter</h3>
+      <p class="max-w-xl text-sm text-grey-900">
+        Grab my free guide on calming your mind in pregnancy! This guide will give you three simple
+        exercises to ground you in a moment of panic or overwhelm.
+      </p>
     </div>
 
     <Subscribe formId="footer-subscribe" />
