fix(app): swiper ux

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -349,6 +349,7 @@ const recentPosts = posts.slice(0, 3)
     autoHeight: true,
     autoplay: {
       delay: 5000,
+      pauseOnMouseEnter: true,
     },
     pagination: {
       el: '.swiper-pagination',
